Add example like dog adoption traits

--- a/garden-store-css/in-stock.html
+++ b/garden-store-css/in-stock.html
@@ -30,7 +30,7 @@
       <section>
         <div>
           <h3>Wild hyacinth</h3>
-          <img src="images/wild-hyacinth.jpg" alt="a wild hyacinth" />
+          <img class="plant-photo" src="images/wild-hyacinth.jpg" alt="a wild hyacinth" />
           <div>
             <p>
               This bulbflower naturalizes well in gardens. The bulb grows best
@@ -42,11 +42,18 @@
               plant spreads by seed rather than by runners.
             </p>
           </div>
+          <div>
+            <ul class="plant-traits">
+              <li>trait 1</li>
+              <li>trait 2</li>
+              <li>trait 3</li>
+            </ul>
+          </div>
         </div>
 
         <div>
           <h3>Lily-of-the-Valley</h3>
-          <img src="images/lily-of-the-valley.jpg" alt="Lily of the Valley" />
+          <img class="plant-photo" src="images/lily-of-the-valley.jpg" alt="Lily of the Valley" />
           <div>
             <p>
               With its deeply fragrant flowers -- scallop-edge bells that dangle
@@ -63,7 +70,7 @@
         <div>
           <h3>Crown imperials</h3>
 
-          <img src="images/crown-imperials.jpg" alt="Crown imperials" />
+          <img class="plant-photo" src="images/crown-imperials.jpg" alt="Crown imperials" />
           <div>
             Crown imperials are strong-growing bulbous plants, making rapid
             growth in the spring, flowering during April/early May and dying
@@ -76,7 +83,7 @@
         <div>
           <h3>Persian buttercup</h3>
 
-          <img src="images/persian-buttercup.jpg" alt="Persian buttercup" />
+          <img class="plant-photo" src="images/persian-buttercup.jpg" alt="Persian buttercup" />
           <div>
             This species of buttercup can get up to 2 feet tall and has large
             showy blooms in a variety of colors from May to June. Persian
@@ -88,7 +95,7 @@
 
         <div>
           <h3>Spring starflower</h3>
-          <img src="images/spring-starflower.jpg" alt="Spring starflower" />
+          <img class="plant-photo" src="images/spring-starflower.jpg" alt="Spring starflower" />
 
           <div>
             These charming little blooming plants hail from Argentina and
@@ -103,7 +110,7 @@
 
         <div>
           <h3>Tulips</h3>
-          <img src="images/tulips.jpg" alt="Tulips" />
+          <img class="plant-photo" src="images/tulips.jpg" alt="Tulips" />
           <div>
             We have a wide variety of tulips in many colors. Plant tulip bulbs
             in the fall, 6 to 8 weeks before a hard frost is expected and when
