--- a/forms-with-js/index.html
+++ b/forms-with-js/index.html
@@ -7,11 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600&display=swap" rel="stylesheet">
   <script src="main.js" defer></script>
 </head>
-
 <body>
   <h1>
     Welcome!
@@ -19,18 +18,38 @@
   <h2>
     Everything is Fine.
   </h2>
-  <header class="header sans-serif">
-    <h3>Registration Form</h3>
-  </header>
-  <main class="sans-serif">
-    <form id="registration-form" class="pa4">
+  <main>
+    <div class="header">
+      <h3>Registration Form</h3>
+    </div>
+    <form action="/" method="POST" id="registration-form" class="pa4">
       <div class="input-field">
         <label for="name-input" class="f6 b db mb2">Name</label>
-        <input type="text" id="name-input" class="input-reset ba b--black-20 pa2 mb2 db w-100">
+        <input type="text" id="name-input" class="input-reset ba b--black-20 pa2 mb2 db w-100" required minlength="2">
       </div>
       <div class="input-field">
-        <label for="email-input" class="f6 b db mb2">Email Address</label>
-        <input type="email" id="email-input" class="input-reset ba b--black-20 pa2 mb2 db w-100">
+        <label for="email-input" class="f6 b db mb2">Email</label>
+        <input type="email" id="email-input" placeholder="example@gmail.com" class="input-reset ba b--black-20 pa2 mb2 db w-100" required>
+      </div>
+      <div class="input-field">
+        <label for="password-input" class="f6 b db mb2" required>Password</label>
+        <input type="password" id="password-input" class="input-reset ba b--black-20 pa2 mb2 db w-100" required>
+      </div>
+      <div class="input-field">
+        <label for="confirm-password" class="f6 b db mb2" required>Confirm Password</label>
+        <input type="password" id="confirm-password" class="input-reset ba b--black-20 pa2 mb2 db w-100" required>
+      </div>
+      <div class="input-field">
+        <label for="place-select" class="f6 b db mb2">Where are you?</label>
+        <select id="place-select" class="ba b--black-20 pa2 mb2 db w-100">
+          <option value=''>--Please select one--</option>
+          <option value="good">The Good Place</option>
+          <option value="bad">The Bad Place</option>
+        </select>
+      </div>
+      <div class="input-field mt2">
+        <input type="checkbox" id="consent-box" checked>
+        <label for="consent-box" class="pa0 ma0 mt2 lh-copy f6 pointer">I agree to the Terms & Conditions</label>
       </div>
       <div class=" input-field">
         <input type="submit" class="button mt3 f6 link dim br3 ph3 pv2 mb2 dib white bg-dark-blue " >
@@ -38,5 +57,4 @@
     </form>
   </main>
 </body>
-
 </html>
